Update to latest.

--- a/templates/block/block--sourcenavigation.html.twig
+++ b/templates/block/block--sourcenavigation.html.twig
@@ -74,7 +74,7 @@
 							<li class="nav-item"><a href="https://thesource.nrel.gov/techtransfer/" class="nav-link">Technology Transfer</a></li>
 						</ul>
 					</li>
-					<li class="dropdown nav-item" data-topnav="tools"><a class="dropdown-toggle nav-link" href="#" data-toggle="dropdown">Business Tools </a>
+					<li class="dropdown nav-item" data-topnav="tools"><a class="dropdown-toggle nav-link" href="#" data-bs-toggle="dropdown">Business Tools </a>
 						<ul class="dropdown-menu" role="menu">
 							<li class="nav-item"><a href="https://workday.nrel.gov/" class="nav-link">Workday</a></li>
 							<li class="nav-item"><a href="https://workspace.nrel.gov/FMInteract/Default.aspx">Workspace</a>
@@ -88,9 +88,9 @@
 							<li class="nav-item"><a href="https://pricingtool.nrel.gov/" class="nav-link">OCFO Pricing Tool (CDW)</a></li>
 							<li class="nav-item"><a href="https://erp.nrel.gov" class="nav-link">Oracle EBS</a></li>
 							<li class="nav-item"><a href="https://asiq.nrel.gov/" class="nav-link">Purchase Requests (ASIQ)</a></li>
-							<li class="nav-item"><a href="/institutional-investments/index.html" class="nav-link">Request NREL Funding</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/institutional-investments/index.html" class="nav-link">Request NREL Funding</a></li>
 							<li class="nav-item"><a href="https://sp2013.nrel.gov/Pages/Home.aspx" class="nav-link">ThePOINT</a></li>
-							<li class="nav-item"><a href="/business-tools/index.html" class="nav-link">See All</a></li>
+							<li class="nav-item"><a href="https://thesource.nrel.gov/business-tools/index.html" class="nav-link">See All</a></li>
 						</ul>
 					</li>
 					<li class="nav-item"><a href="https://thesource.nrel.gov/src-index/index.html" class="nav-link">A-Z Index</a></li>
