--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,7 @@ abbr[data-original-title], abbr[title] {
     color: #004677;
 }
 
-.corporate-topnav .navbar-light .navbar-nav .show.dropdown-menu a.dropdown-item:after {
+.corporate-topnav .navbar-light .navbar-nav .show.dropdown-menu a:after {
     content: '\f0da';
     font-family: FontAwesome;
     font-weight: normal;
@@ -228,8 +228,6 @@ abbr[data-original-title], abbr[title] {
         border-color: transparent;
     }
 }
-
-
 .searchbar {
     float: right;
     margin-top: 7px;
@@ -284,11 +282,6 @@ form label.form-required:after, form h2.form-required:after {
     display: inline-block;
     line-height: 1;
     color: #333;
-}
-
-/* The logo.svg that we have is offset by 6px compared to the png in the template. */
-header .logo {
-    margin-left: -6px;
 }
 
 /*  Accordions - based on the styles from the source-template.html file, adapted for use with the lb_tabs accordions. */
@@ -378,35 +371,8 @@ header .logo {
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
 }
-.banner-logo {
-    max-height: 56px;
+/* Remove Bootstrap Barrio file icons in favor of theSource icons. */
+span.file {
+    background-image: none;
+    padding-left: 0px;
 }
-
-.searchbar-form {
-    margin-top: 7px;
-}
-
-.banner-logo .col-md-6 {
-    margin-top: 20px;
-}
-
-.navbar .form-group {
-    margin-top: -80px;
-}
-
-.searchbar-form {
-    margin-top: 40px;
-}
-
-.searchbar-form .form-control {
-    font-size: 0.9rem;
-    width: 200px;
-}
-.corporate-topnav .navbar-light .navbar-nav .dropdown-menu.show > li > a:after {
-    content: '\f0da';
-    font-family: FontAwesome;
-    font-weight: normal;
-    font-style: normal;
-    margin:0px 0px 0px 10px;
-    text-decoration:none;
- }
