--- a/templates/block/block--system-branding-block.html.twig
+++ b/templates/block/block--system-branding-block.html.twig
@@ -22,7 +22,7 @@
   </div>
 </div>
 <div class="d-md-none">
-  <button type="button" class="navbar-toggler searchbar-toggle" data-toggle="collapse" data-target="#searchbar-collapse" role="button" aria-expanded="false" aria-controls="searchbar-collapse">
+  <button type="button" class="navbar-toggler searchbar-toggle" data-bs-toggle="collapse" data-bs-target="#searchbar-collapse" role="button" aria-expanded="false" aria-controls="searchbar-collapse">
 
     <i class="fa fa-search" aria-hidden="true"></i><span class="sr-only">Toggle Search</span>
   </button>
@@ -45,9 +45,9 @@
 
         <form action="https://thesource.nrel.gov/phonebook/index.html" method="post" class="searchbar-form form-inline">
           <div class="form-group">
-            <label for="emp-search" class="sr-only">Test Search Employee Directory</label>
-            <input id="emp-search" type="text" placeholder="Test Search Employee Directory" name="zzsearch" class="form-control">
-            <button type="submit" class="btn btn-default">Test Search</button>
+            <label for="emp-search" class="sr-only">Search Employee Directory</label>
+            <input id="emp-search" type="text" placeholder="Search Employee Directory" name="zzsearch" class="form-control">
+            <button type="submit" class="btn btn-default">Search</button>
           </div>
         </form>
       </div>
