--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -122,7 +122,7 @@
     <div class=" {{ container }}">
         <div class="navbar navbar-inverse navbar-light navbar-expand-lg" id="mobilenav">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#collapsemenu"
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#collapsemenu"
                         aria-expanded="false" aria-controls="collapsemenu"><span
                             class="navbar-toggler-icon"></span><span class="navbar-toggle-label"> menu</span></button>
                 <div class="collapse navbar-collapse" id="collapsemenu">
